# aoc-rust

./: .editorconfig  .gitignore  Cargo.toml  bacon.toml  flake.nix  readme.txt  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust-ci.yml
src/: error.rs  lib.rs
src/common/: dir.rs  graph.rs  grid.rs  math.rs  md5.rs  mod.rs  parse.rs  union_find.rs  vec.rs
src/solutions/2015/: day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs  day-06.rs  day-07.rs  day-08.rs  day-09.rs  day-10.rs  day-11.rs  day-12.rs  day-13.rs  day-14.rs  day-15.rs  day-16.rs  day-17.rs  day-18.rs  day-19.rs  day-20.rs  day-21.rs  day-22.rs  day-23.rs  day-24.rs  day-25.rs
src/solutions/2016/: day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs  day-06.rs  day-07.rs  day-08.rs  day-09.rs  day-10.rs  day-11.rs
src/solutions/2020/: day-01.rs  day-04.rs  day-05.rs
src/solutions/2021/: day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs  day-06.rs  day-07.rs  day-08.rs  day-09.rs  day-10.rs  day-11.rs  day-12.rs
src/solutions/2023/: day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs  day-06.rs  day-07.rs  day-08.rs  day-09.rs  day-10.rs  day-11.rs  day-12.rs  day-13.rs  day-14.rs  day-15.rs  day-16.rs  day-17.rs  day-18.rs  day-19.rs  day-20.rs  day-21.rs  day-22.rs  day-23.rs  day-24.rs  day-25.rs
src/solutions/2024/: day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs  day-06.rs  day-07.rs  day-08.rs  day-09.rs  day-10.rs  day-11.rs  day-12.rs  day-13.rs  day-14.rs  day-15.rs  day-16.rs  day-17.rs  day-18.rs  day-19.rs  day-20.rs  day-21.rs  day-22.rs  day-23.rs  day-24.rs  day-25.rs
src/solutions/2025/: day-01.rs  day-02.rs  day-03.rs  day-04.rs  day-05.rs  day-06.rs  day-07.rs  day-08.rs  day-09.rs
src/templates/: day.txt
src/util/: error.rs  util.rs
src/util/commands/: aoc_cli.rs  mod.rs  scaffold.rs  solve.rs  test.rs
