[[bin]]
name = "util"
path = "src/util/util.rs"

[[bin]]
name = "2023-01"
path = 'src\solutions\2023\day-01.rs'

[[bin]]
name = "2023-02"
path = 'src\solutions\2023\day-02.rs'

[[bin]]
name = "2023-03"
path = 'src\solutions\2023\day-03.rs'

[[bin]]
name = "2023-04"
path = 'src\solutions\2023\day-04.rs'

[[bin]]
name = "2023-05"
path = 'src\solutions\2023\day-05.rs'

[[bin]]
name = "2023-06"
path = 'src\solutions\2023\day-06.rs'

[[bin]]
name = "2023-07"
path = 'src\solutions\2023\day-07.rs'

[[bin]]
name = "2023-08"
path = 'src\solutions\2023\day-08.rs'

[[bin]]
name = "2023-09"
path = 'src\solutions\2023\day-09.rs'

[[bin]]
name = "2023-10"
path = 'src\solutions\2023\day-10.rs'

[[bin]]
name = "2023-11"
path = 'src\solutions\2023\day-11.rs'

[[bin]]
name = "2023-12"
path = 'src\solutions\2023\day-12.rs'

[[bin]]
name = "2023-13"
path = 'src\solutions\2023\day-13.rs'

[[bin]]
name = "2023-14"
path = 'src\solutions\2023\day-14.rs'

[[bin]]
name = "2023-15"
path = 'src\solutions\2023\day-15.rs'

[[bin]]
name = "2023-16"
path = 'src\solutions\2023\day-16.rs'

[dependencies]
chrono = "0.4.31"
nom = "7.1.3"
num-integer = "0.1.45"
toml = "0.8.8"

[dependencies.clap]
features = ["derive"]
version = "4.4.11"

[package]
edition = "2021"
name = "aoc-rust"
version = "0.1.0"
