[[bin]]
name = "util"
path = "src/util/util.rs"

[[bin]]
name = "2023-01"
path = 'src\solutions\2023\day-01.rs'

[[bin]]
name = "2023-02"
path = 'src\solutions\2023\day-02.rs'

[[bin]]
name = "2023-03"
path = 'src\solutions\2023\day-03.rs'

[[bin]]
name = "2023-04"
path = 'src\solutions\2023\day-04.rs'

[[bin]]
name = "2023-05"
path = 'src\solutions\2023\day-05.rs'

[[bin]]
name = "2023-06"
path = 'src\solutions\2023\day-06.rs'

[[bin]]
name = "2023-07"
path = 'src\solutions\2023\day-07.rs'

[[bin]]
name = "2023-08"
path = 'src\solutions\2023\day-08.rs'

[[bin]]
name = "2023-09"
path = 'src\solutions\2023\day-09.rs'

[[bin]]
name = "2023-10"
path = 'src\solutions\2023\day-10.rs'

[[bin]]
name = "2023-11"
path = 'src\solutions\2023\day-11.rs'

[[bin]]
name = "2023-12"
path = 'src\solutions\2023\day-12.rs'

[[bin]]
name = "2023-13"
path = 'src\solutions\2023\day-13.rs'

[[bin]]
name = "2023-14"
path = 'src\solutions\2023\day-14.rs'

[[bin]]
name = "2023-15"
path = 'src\solutions\2023\day-15.rs'

[[bin]]
name = "2023-16"
path = 'src\solutions\2023\day-16.rs'

[[bin]]
name = "2023-17"
path = 'src\solutions\2023\day-17.rs'

[[bin]]
name = "2023-18"
path = 'src\solutions\2023\day-18.rs'

[[bin]]
name = "2023-19"
path = 'src\solutions\2023\day-19.rs'

[[bin]]
name = "2023-20"
path = 'src\solutions\2023\day-20.rs'

[[bin]]
name = "2023-21"
path = 'src\solutions\2023\day-21.rs'

[[bin]]
name = "2023-22"
path = 'src\solutions\2023\day-22.rs'

[[bin]]
name = "2023-23"
path = 'src\solutions\2023\day-23.rs'

[[bin]]
name = "2023-24"
path = 'src\solutions\2023\day-24.rs'

[[bin]]
name = "2023-25"
path = 'src\solutions\2023\day-25.rs'

[[bin]]
name = "2015-01"
path = 'src\solutions\2015\day-01.rs'

[[bin]]
name = "2015-02"
path = 'src\solutions\2015\day-02.rs'

[[bin]]
name = "2015-03"
path = 'src\solutions\2015\day-03.rs'

[[bin]]
name = "2015-04"
path = 'src\solutions\2015\day-04.rs'

[[bin]]
name = "2015-05"
path = 'src\solutions\2015\day-05.rs'

[[bin]]
name = "2015-06"
path = 'src\solutions\2015\day-06.rs'

[[bin]]
name = "2015-07"
path = 'src\solutions\2015\day-07.rs'

[[bin]]
name = "2015-08"
path = 'src\solutions\2015\day-08.rs'

[[bin]]
name = "2015-09"
path = 'src\solutions\2015\day-09.rs'

[[bin]]
name = "2015-10"
path = 'src\solutions\2015\day-10.rs'

[dependencies]
chrono = "0.4.31"
itertools = "0.12.0"
ndarray = "0.15.6"
nom = "7.1.3"
num-integer = "0.1.45"
petgraph = "0.6.4"
rust-crypto = "0.2.36"
rustworkx-core = "0.13.2"
toml = "0.8.8"

[dependencies.clap]
features = ["derive"]
version = "4.4.11"

[dependencies.ndarray-linalg]
features = ["intel-mkl-static"]
version = "0.16.0"

[package]
edition = "2021"
name = "aoc-rust"
version = "0.1.0"
